--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "js-cookie": "^3.0.1",
     "quill": "^1.3.7",
+    "quill-image-compress": "^1.2.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
