--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
-    "react-native": "^0.65.1",
+    "react-native": "^0.61.4",
     "react-native-web": "^0.17.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-spinners": "^0.11.0",
     "socket.io-client": "^4.2.0",
     "web-vitals": "^1.1.2"
